# hypercolor

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DRIVERS.md  NOTICE  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  WEB_ENGINES.md  deny.toml  justfile  netlify.toml  rust-toolchain.toml
crates/hypercolor-app/: Cargo.toml  Info.plist  README.md  entitlements.plist  installer-hooks.nsh  tauri.bundle.conf.json  tauri.conf.json  tauri.windows.bundle.conf.json
crates/hypercolor-app/capabilities/: default.json
crates/hypercolor-app/icons/: icon.icns
crates/hypercolor-app/src/: cli.rs  daemon_client.rs  diagnostics.rs  first_run.rs  helper_client.rs  lib.rs  linux_webkit.rs  logging.rs  main.rs  power_events.rs  process_ext.rs  resources.rs  state.rs  support.rs  window.rs
crates/hypercolor-app/tests/: cli_tests.rs  config_tests.rs  daemon_client_security_tests.rs  linux_webkit_tests.rs  logging_tests.rs  packaging_tests.rs  resources_tests.rs  state_tests.rs  supervisor_tests.rs  support_tests.rs  tray_action_tests.rs  tray_menu_tests.rs  window_tests.rs
crates/hypercolor-cli/: Cargo.toml  README.md
crates/hypercolor-cli/src/: client.rs  lib.rs  main.rs  output.rs
crates/hypercolor-cli/tests/: cli_tests.rs  e2e_harness_tests.rs  external_command_tests.rs  request_shape_tests.rs
crates/hypercolor-cloud-api/: Cargo.toml  README.md
crates/hypercolor-cloud-api/src/: auth.rs  devices.rs  entitlements.rs  envelope.rs  lib.rs  sync.rs  updates.rs
crates/hypercolor-cloud-api/tests/: api_contract_tests.rs
crates/hypercolor-cloud-client/: Cargo.toml  README.md
crates/hypercolor-cloud-client/src/: auth.rs  config.rs  connect.rs  devices.rs  entitlements.rs  error.rs  lib.rs  secrets.rs  sync.rs  sync_cursor.rs
crates/hypercolor-cloud-client/tests/: auth_flow_tests.rs  client_config_tests.rs  connect_tests.rs  entitlements_tests.rs  secrets_tests.rs  sync_cursor_tests.rs  sync_tests.rs  token_refresh_tests.rs
crates/hypercolor-core/: Cargo.toml  README.md  build.rs
crates/hypercolor-core/benches/: core_pipeline.rs
crates/hypercolor-core/src/: blend_math.rs  lib.rs  overlay.rs
crates/hypercolor-core/tests/: asset_library_tests.rs  attachment_profile_tests.rs  attachment_registry_tests.rs  audio_linux_tests.rs  audio_pipeline_tests.rs  backend_contention_tests.rs  backend_manager_tests.rs  blend_math_tests.rs  blocks_backend_tests.rs  builtin_effect_tests.rs  bus_tests.rs  config_tests.rs  credential_store_tests.rs  device_tests.rs  effect_factory_tests.rs  effect_generation_tests.rs  effect_pool_tests.rs  effect_tests.rs  engine_tests.rs  html_loader_tests.rs  hue_backend_tests.rs  hue_bridge_tests.rs  hue_color_tests.rs  hue_scanner_tests.rs  hue_streaming_tests.rs  hue_types_tests.rs  input_tests.rs  lifecycle_tests.rs  lightscript_injection_tests.rs  mdns_browser_tests.rs  media_input_tests.rs  media_player_tests.rs  media_producer_tests.rs  mock_integration_tests.rs  nanoleaf_backend_tests.rs  nanoleaf_streaming_tests.rs  nanoleaf_topology_tests.rs  openrgb_tests.rs  overlay_clock_tests.rs  overlay_image_tests.rs  (+23 more)
crates/hypercolor-daemon/: Cargo.toml  README.md
crates/hypercolor-daemon-link/: Cargo.toml  README.md
crates/hypercolor-daemon-link/src/: admission.rs  channel.rs  frame.rs  handshake.rs  identity.rs  lib.rs
crates/hypercolor-daemon-link/tests/: link_protocol_tests.rs
crates/hypercolor-daemon/benches/: render_pipeline.rs
crates/hypercolor-daemon/src/: attachment_profiles.rs  cloud_connection.rs  cloud_entitlements.rs  cloud_socket.rs  cloud_state.rs  daemon.rs  deadline.rs  device_metrics.rs  device_settings.rs  discovery.rs  display_frames.rs  display_output.rs  display_overlays.rs  display_preferences.rs  effect_layouts.rs  extensions.rs  layout_auto_exclusions.rs  layout_store.rs  lib.rs  library.rs  logical_devices.rs  main.rs  mdns.rs  network.rs  performance.rs  playlist_runtime.rs  preview_runtime.rs  profile_store.rs  render_thread.rs  runtime_state.rs  scene_store.rs  scene_transactions.rs  session.rs  simulators.rs  startup.rs  windows_service.rs  zone_layout_preview.rs
crates/hypercolor-daemon/tests/: api_tests.rs  asset_api_tests.rs  attachment_api_tests.rs  cloud_api_tests.rs  cloud_connection_tests.rs  cloud_socket_tests.rs  daemon_integration_tests.rs  device_metrics_tests.rs  device_settings_tests.rs  discovery_tests.rs  display_frames_watch_tests.rs  display_output_tests.rs  display_preferences_tests.rs  display_preview_tests.rs  effect_registry_invalidation_tests.rs  (+17 more)
crates/hypercolor-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/hypercolor-driver-api/: Cargo.toml  README.md
crates/hypercolor-driver-builtin/: Cargo.toml  README.md
crates/hypercolor-driver-govee/: Cargo.toml  README.md
crates/hypercolor-driver-hue/: Cargo.toml  README.md
crates/hypercolor-driver-nanoleaf/: Cargo.toml  README.md
crates/hypercolor-driver-openrgb/: Cargo.toml
crates/hypercolor-driver-wled/: Cargo.toml  README.md
crates/hypercolor-hal/: Cargo.toml  README.md
crates/hypercolor-leptos-ext/: Cargo.toml  README.md
crates/hypercolor-leptos-ext-macros/: Cargo.toml  README.md
crates/hypercolor-linux-gpu-interop/: Cargo.toml  README.md
crates/hypercolor-macos-gpu-interop/: Cargo.toml
crates/hypercolor-network/: Cargo.toml  README.md
crates/hypercolor-openrgb-sdk/: CLEANROOM.md  Cargo.toml
crates/hypercolor-tray/: Cargo.toml  README.md
crates/hypercolor-tui/: Cargo.toml  README.md
crates/hypercolor-types/: Cargo.toml  README.md
crates/hypercolor-ui/: --full-page  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package.json  tailwind.config.js
crates/hypercolor-windows-gpu-interop/: Cargo.toml
crates/hypercolor-windows-helper/: Cargo.toml
python/: README.md  justfile  pyproject.toml
python/scripts/: generate_openapi_client.py  generate_ws_protocol.py
python/tests/: conftest.py  test_cli.py  test_client.py  test_models.py  test_scenes_zones.py  test_sync_client.py  test_websocket.py
(+2084 files in other folders)
