[workspace]
members = ["crates/*"]
exclude = ["crates/hypercolor-ui"]
resolver = "3"

[patch.crates-io]
midir = { path = "vendor/midir" }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "Apache-2.0"
repository = "https://github.com/hyperb1iss/hypercolor"
homepage = "https://github.com/hyperb1iss/hypercolor"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
style = { level = "warn", priority = 1 }
perf = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 10 }
missing_errors_doc = { level = "allow", priority = 20 }
missing_panics_doc = { level = "allow", priority = 20 }
missing_safety_doc = { level = "allow", priority = 20 }
module_name_repetitions = { level = "allow", priority = 21 }
significant_drop_tightening = { level = "allow", priority = 21 }
must_use_candidate = { level = "allow", priority = 21 }
implicit_hasher = { level = "allow", priority = 21 }
cast_precision_loss = { level = "warn", priority = 22 }
cast_possible_truncation = { level = "warn", priority = 22 }
cast_sign_loss = { level = "warn", priority = 22 }
as_conversions = { level = "warn", priority = 22 }
out_of_bounds_indexing = { level = "deny", priority = 30 }
enum_glob_use = { level = "deny", priority = 30 }
unwrap_used = { level = "deny", priority = 30 }
undocumented_unsafe_blocks = { level = "deny", priority = 30 }
dbg_macro = { level = "warn", priority = 31 }
todo = { level = "warn", priority = 31 }
manual_let_else = { level = "warn", priority = 36 }
redundant_else = { level = "warn", priority = 36 }
semicolon_if_nothing_returned = { level = "warn", priority = 36 }
cloned_instead_of_copied = { level = "warn", priority = 36 }
flat_map_option = { level = "warn", priority = 36 }
from_iter_instead_of_collect = { level = "warn", priority = 36 }
needless_pass_by_value = { level = "warn", priority = 36 }
trivially_copy_pass_by_ref = { level = "warn", priority = 36 }
if_not_else = { level = "warn", priority = 36 }
match_same_arms = { level = "warn", priority = 36 }
needless_continue = { level = "warn", priority = 36 }

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
tokio-util = "0.7"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Data structures
uuid = { version = "1.11", features = ["v7", "serde"] }
arc-swap = "1.7"
strum = { version = "0.27", features = ["derive"] }

# Config
dirs = "6.0"
notify = "7.0"
sysinfo = "0.38.4"
nvml-wrapper = "0.12.1"

# Crypto / auth
aes-gcm = "0.10.3"
rand = "0.10"
webrtc-dtls = "0.12.0"
webrtc-util = "0.11.0"

# Workspace crates
hypercolor-types = { path = "crates/hypercolor-types" }
hypercolor-hal = { path = "crates/hypercolor-hal" }
hypercolor-core = { path = "crates/hypercolor-core" }
hypercolor-driver-api = { path = "crates/hypercolor-driver-api" }
hypercolor-driver-hue = { path = "crates/hypercolor-driver-hue" }
hypercolor-driver-nanoleaf = { path = "crates/hypercolor-driver-nanoleaf" }
hypercolor-driver-wled = { path = "crates/hypercolor-driver-wled" }
hypercolor-network = { path = "crates/hypercolor-network" }
hypercolor-tui = { path = "crates/hypercolor-tui" }

# Audio + input capture
realfft = "3.4"
rustfft = "6.2"
cpal = "0.17.3"
libpulse-binding = "2.30.1"
device_query = "4.0.1"
evdev = "0.13.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Zero-copy byte reinterpretation for wire-format protocol structs
zerocopy = { version = "0.8", features = ["derive"] }

# Network / device backends
mdns-sd = "0.11"
tonic = "0.12"
prost = "0.13"
nusb = { version = "0.2.2", features = ["tokio"] }
zbus = { version = "=5.13.0", default-features = false, features = ["tokio"] }

# Screen capture
ashpd = { version = "0.13.9", default-features = false, features = ["tokio", "screencast"] }
pipewire = "0.9.2"

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rmcp = { version = "1.1.0", default-features = false, features = ["server", "transport-streamable-http-server"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
owo-colors = "4"
unicode-width = "0.2.2"

# TUI
ratatui = "0.30"
crossterm = "0.29"
dpi = "0.1"
opaline = { version = "0.4", features = ["global-state", "owo-colors", "widgets", "discovery"] }
tachyonfx = "0.25"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
tokio-tungstenite = "0.26"
open = "5"

# Imaging
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
gif = "0.14.2"
tiny-skia = { version = "0.12.0", default-features = false, features = ["std", "simd"] }
cosmic-text = "0.18.2"
resvg = "0.47.0"
time = { version = "0.3.47", features = ["local-offset"] }
turbojpeg = { version = "1.4.0", default-features = false, features = ["cmake", "require-simd"] }
fast_image_resize = "6.0.0"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "vulkan", "metal", "dx12", "gles", "wgsl"] }
pollster = "0.4.0"

# Testing
tempfile = "3.14"
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Keep local development responsive without the massive runtime cliff of
# completely unoptimized Servo/canvas streaming in debug builds.
[profile.dev]
opt-level = 1
debug = 1

# Keep Hypercolor crates debuggable, but treat third-party dependencies more
# like "runtime" code: optimize them, trim debug payload, and drop expensive
# safety instrumentation that mostly hurts hot render paths.
[profile.dev.package."*"]
opt-level = 2
debug = "line-tables-only"
debug-assertions = false
overflow-checks = false

# The daemon render path is hot even in local iteration, so give the core
# runtime a bit more help than the rest of the workspace.
[profile.dev.package.hypercolor-core]
opt-level = 2

[profile.dev.package.hypercolor-daemon]
opt-level = 2

[profile.dev.package.hypercolor-hal]
opt-level = 2

# Servo HTML effects spend most CPU time in software canvas rasterization
# (`vello_cpu` + SIMD helpers). Keep dev edit-compile loops fast while
# avoiding debug-profile runtime cliffs for live preview.
[profile.dev.package.libservo]
opt-level = 3
debug = 0

[profile.dev.package.vello_cpu]
opt-level = 3
debug = 0

[profile.dev.package.vello_common]
opt-level = 3
debug = 0

[profile.dev.package.fearless_simd]
opt-level = 3
debug = 0

# JavaScript-heavy effects spend significant time in Servo's script pipeline.
[profile.dev.package.mozjs]
opt-level = 3
debug = 0

[profile.dev.package.mozjs_sys]
opt-level = 3
debug = 0

[profile.dev.package.servo-script]
opt-level = 3
debug = 0

[profile.dev.package.servo-script-bindings]
opt-level = 3
debug = 0

[profile.dev.package.servo-canvas]
opt-level = 3
debug = 0

[profile.dev.package.servo-layout]
opt-level = 3
debug = 0

[profile.dev.package.webrender]
opt-level = 3
debug = 0

[profile.dev.package.webrender_api]
opt-level = 3
debug = 0

# Preview keeps the fast inner dev loop from `dev`, but disables the remaining
# runtime-heavy safety checks in Hypercolor crates so local daemon/UI runs feel
# much closer to release builds.
[profile.preview]
inherits = "dev"
debug-assertions = false
overflow-checks = false

[profile.preview.package."*"]
opt-level = 2
debug = "line-tables-only"
debug-assertions = false
overflow-checks = false

[profile.preview.package.hypercolor-core]
opt-level = 2
debug-assertions = false
overflow-checks = false

[profile.preview.package.hypercolor-daemon]
opt-level = 2
debug-assertions = false
overflow-checks = false

[profile.preview.package.hypercolor-hal]
opt-level = 2
debug-assertions = false
overflow-checks = false

[profile.preview.package.libservo]
opt-level = 3
debug = 0

[profile.preview.package.vello_cpu]
opt-level = 3
debug = 0

[profile.preview.package.vello_common]
opt-level = 3
debug = 0

[profile.preview.package.fearless_simd]
opt-level = 3
debug = 0

[profile.preview.package.mozjs]
opt-level = 3
debug = 0

[profile.preview.package.mozjs_sys]
opt-level = 3
debug = 0

[profile.preview.package.servo-script]
opt-level = 3
debug = 0

[profile.preview.package.servo-script-bindings]
opt-level = 3
debug = 0

[profile.preview.package.servo-canvas]
opt-level = 3
debug = 0

[profile.preview.package.servo-layout]
opt-level = 3
debug = 0

[profile.preview.package.webrender]
opt-level = 3
debug = 0

[profile.preview.package.webrender_api]
opt-level = 3
debug = 0
