[package]
name = "hypercolor-app"
description = "Unified desktop app for the Hypercolor lighting engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypercolor-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
url = "2.5.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
