[package]
name = "hypercolor-app"
description = "Unified desktop app for the Hypercolor lighting engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypercolor-app"
path = "src/main.rs"

[lints.rust]
# Win32 power-event message-pump (power_events::windows_impl) needs FFI
# unsafe. Mirror the pattern from hypercolor-windows-pawnio /
# hypercolor-windows-gpu-interop: allow at the crate level, deny
# undocumented blocks at clippy.
unsafe_code = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"

[dependencies]
hypercolor-core = { workspace = true }
hypercolor-types = { workspace = true }
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber.workspace = true
anyhow.workspace = true
url = "2.5.8"
open = "5"
chrono = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
win32job = "2.0.3"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = { workspace = true }
