[package]
name = "hypercolor-cli"
description = "Command-line interface for the Hypercolor RGB lighting engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypercolor"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["tui"]
tui = ["dep:hypercolor-tui"]

[dependencies]
hypercolor-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
opaline = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
toml = { workspace = true }
open = { workspace = true }
hypercolor-tui = { workspace = true, optional = true }

[dev-dependencies]
hypercolor-core = { path = "../hypercolor-core", default-features = false }
hypercolor-daemon = { path = "../hypercolor-daemon", default-features = false }
tempfile = { workspace = true }
axum = { workspace = true }
