[package]
name = "hypercolor-cloud-api"
description = "Shared Hypercolor Cloud API contract types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
