[package]
name = "hypercolor-cloud-client"
description = "Daemon-side Hypercolor Cloud client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
hypercolor-cloud-api = { workspace = true }
hypercolor-daemon-link = { workspace = true }
hypercolor-types = { workspace = true }
keyring-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }
