[package]
name = "hypercolor-core"
description = "Core engine for the Hypercolor RGB lighting orchestration system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
servo = ["dep:servo", "dep:dpi", "dep:rustls", "dep:mozjs-jit"]

[dependencies]
hypercolor-types = { workspace = true }
hypercolor-hal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
mdns-sd = { workspace = true }
reqwest = { workspace = true }
nusb = { workspace = true }
realfft = { workspace = true }
rustfft = { workspace = true }
cpal = { workspace = true }
device_query = { workspace = true }
dpi = { workspace = true, optional = true }
servo = { package = "libservo", git = "https://github.com/servo/servo", rev = "301f7da52e320764fd0063facb90de0ec8db8f25", default-features = false, optional = true }
mozjs-jit = { package = "mozjs", version = "=0.14.8", default-features = false, features = ["jit"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
